compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__results__aliased_error.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "import gleam.{Error as Thing}\npub fn main() { Thing(1) }"
---
----- SOURCE CODE
import gleam.{Error as Thing}
pub fn main() { Thing(1) }

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Error as Thing } from "../gleam.mjs";

export function main() {
  return new Thing(1);
}
