compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__results__aliased_ok.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "import gleam.{Ok as Thing}\npub fn main() { Thing(1) }"
---
----- SOURCE CODE
import gleam.{Ok as Thing}
pub fn main() { Thing(1) }

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Ok as Thing } from "../gleam.mjs";

export function main() {
  return new Thing(1);
}
