compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__results__qualified_error_fn.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Error }"
---
----- SOURCE CODE
import gleam
pub fn main() { gleam.Error }

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function main() {
  return (var0) => { return new $gleam.Error(var0); };
}
